--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.11.1_min.js"></script>
     <script src="cannon.min.js"></script>
     <script src="https://s0.2mdn.net/ads/studio/cached_libs/threejs_2.0.0_min.js"></script>
-    <title>H2FY23|AllDSP|Evergreen|ClimateChange|v1 300x600</title>
+    <title>Interaction (boxes creation)</title>
 
 </head>
 
