--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.11.1_min.js"></script>
     <script src="cannon.min.js"></script>
     <script src="https://s0.2mdn.net/ads/studio/cached_libs/threejs_2.0.0_min.js"></script>
-    <title>Interaction (boxes creation)</title>
+    <title>300x600</title>
 
 </head>
 
@@ -37,9 +37,9 @@
         <div id="logo" class="clickable">
         </div>
 
-        <div id="ctaWrap" class="clickable">
+        <!-- <div id="ctaWrap" class="clickable">
             <div id="cta"></div>
-        </div>
+        </div> -->
         <div id="button">Create boxes</div>
         <div id="wrect"></div>
         <div id="border"></div>
